feat: 支持确认删除研究及关联数据
